<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.raviteja.inclass8_expenseapp.ShowExpense">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Expense_Details"
        android:id="@+id/ExpenseDetails"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:id="@+id/textView"
        android:layout_gravity="left|top"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Category"
        android:id="@+id/textView2"
        android:layout_gravity="left|top"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="80dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Amount"
        android:id="@+id/textView3"
        android:layout_gravity="left|top"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="110dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Date"
        android:id="@+id/textView4"
        android:layout_gravity="left|top"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="140dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/name_value"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/category_value"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="80dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/amount_value"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="110dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/date_value"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="140dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Close"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300dp" />
</FrameLayout>
